--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -4,6 +4,7 @@ header
 	if (req.isAuthenticated())
 		li
 			a(href="/users/"+req.user.id, title="Profile") Profile
+			img(src=req.user.google.picture)
 		li
 			a(href="/logout", title="logout") Logout
 	else
