Changed Readme, removed not used files and updated license file

--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,8 +1,17 @@
 extends ../layouts/default
 
 block main
-  h2= title
-  ol
-    li Awesome! Now add some routes, models, views and controllers.
-    li Change the content of
-      code app/views/home/index.jade
+	span.font-large G
+	span.font-small oogle authorization
+	span.font-large E
+	span.font-small xpress for MVC
+	span.font-large NO
+	span.font-small dejs under the hood
+	span.font-large M
+	span.font-small ongoose for DB
+	span.font-large T
+	span.font-small witter Bootstrap for style 
+	ol
+		li Awesome! Now add some routes, models, views and controllers.
+		li Change the content of
+			code app/views/home/index.jade
